[package]
name = "dark_forge"
version = "0.1.0"
authors = ["Benjamin Falk <benjamin.falk@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dark_forge"
path = "src/lib.rs"

[dependencies]
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
